--- a/app/src/main/res/layout/rule_item.xml
+++ b/app/src/main/res/layout/rule_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
@@ -18,16 +19,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_5"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="horizontal">
+
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/auto_config_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="start|center"
                     android:singleLine="true"
@@ -35,42 +38,99 @@
                     android:textColor="@color/black"
                     android:textSize="12sp" />
 
+
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/auto_config_time"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="start|center"
                     android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:text="激活时间："
                     android:textSize="8sp"
                     tools:ignore="SmallSp" />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/auto_config_week"
-                    android:layout_width="match_parent"
+                    android:id="@+id/auto_config_time"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="start|center"
                     android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="8sp"
+                    tools:ignore="SmallSp" />
+
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="start|center"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:text="生效星期："
+                    android:textSize="8sp"
+                    tools:ignore="SmallSp" />
+
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/auto_config_week"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="start|center"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="8sp"
+                    tools:ignore="SmallSp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="start|center"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:text="次数："
                     android:textSize="8sp"
                     tools:ignore="SmallSp" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/auto_config_count"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="start|center"
                     android:singleLine="true"
+                    android:textColor="@color/black"
                     android:textSize="8sp"
                     tools:ignore="SmallSp" />
 
+
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/auto_config_next"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="start|center"
                     android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:text="每隔几秒："
+                    android:textSize="8sp"
+                    tools:ignore="SmallSp" />
+
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/auto_config_next"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="start|center"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
                     android:textSize="8sp"
                     tools:ignore="SmallSp" />
             </LinearLayout>
+
 
         </LinearLayout>
 
