chore: 增加自定义日历，TOOD: 完成配置保存和范围判断来打卡

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -230,35 +230,6 @@
                         android:layout_marginTop="2dp"
                         android:orientation="horizontal">
 
-                        <CheckBox
-                            android:id="@+id/saturday_ck"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:checked="true" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:text="周六打卡"
-                            android:textSize="20sp" />
-
-                        <CheckBox
-                            android:id="@+id/sunday_ck"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:checked="true" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:text="周日打卡"
-                            android:textSize="20sp" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -284,7 +255,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
-                        android:text="打卡状态"
+                        android:text="打卡时间"
                         android:textColor="@android:color/background_dark"
                         android:textSize="20sp" />
 
@@ -295,95 +266,62 @@
                         android:layout_marginBottom="5dp"
                         android:background="@android:color/holo_red_light" />
 
-
-                    <LinearLayout
+                    <com.haibin.calendarview.CalendarLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        app:calendar_content_view_id="@+id/recyclerView"
+                        app:calendar_show_mode="only_month_view"
+                        app:default_status="expand">
 
-                        <TextView
-                            android:layout_width="wrap_content"
+                        <com.haibin.calendarview.CalendarView
+                            android:id="@+id/calendarView"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:text="上午上班打卡状态："
-                            android:textSize="20sp" />
-
-                        <CheckBox
-                            android:id="@+id/morning_start_checkin_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:checked="true" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:text="上午下班打卡状态："
-                            android:textSize="20sp" />
-
-                        <CheckBox
-                            android:id="@+id/morning_end_checkin_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:checked="true" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:text="下午上班打卡状态："
-                            android:textSize="20sp" />
-
-                        <CheckBox
-                            android:id="@+id/afternoon_start_checkin_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:checked="true" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:text="下午下班打卡状态："
-                            android:textSize="20sp" />
-
-                        <CheckBox
-                            android:id="@+id/afternoon_end_checkin_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:checked="true" />
-
-                    </LinearLayout>
-
+                            android:background="#fff"
+                            app:calendar_padding_left="22dp"
+                            app:calendar_padding_right="10dp"
+                            app:current_day_lunar_text_color="#ff0000"
+                            app:current_day_text_color="#ff0000"
+                            app:current_month_lunar_text_color="#CFCFCF"
+                            app:current_month_text_color="#333333"
+                            app:lunar_text_size="10sp"
+                            app:max_year="2050"
+                            app:max_year_day="31"
+                            app:max_year_month="12"
+                            app:min_year="2008"
+                            app:min_year_day="1"
+                            app:min_year_month="1"
+                            app:month_view="cn.martinkay.autocheckinplugin.calendarview.CustomMonthView"
+                            app:month_view_auto_select_day="last_select_day_ignore_current"
+                            app:month_view_show_mode="mode_only_current"
+                            app:other_month_lunar_text_color="#e1e1e1"
+                            app:other_month_text_color="#e1e1e1"
+                            app:scheme_lunar_text_color="#CFCFCF"
+                            app:scheme_text="假"
+                            app:scheme_text_color="#333"
+                            app:scheme_theme_color="#128c4b"
+                            app:select_mode="multi_mode"
+                            app:selected_lunar_text_color="#128c4b"
+                            app:selected_text_color="#128c4b"
+                            app:selected_theme_color="#4D0099FF"
+                            app:week_background="#fff"
+                            app:week_bar_height="46dp"
+                            app:week_line_background="#00000000"
+                            app:week_line_margin="16dp"
+                            app:week_start_with="sun"
+                            app:week_text_size="10sp"
+                            app:week_view="cn.martinkay.autocheckinplugin.calendarview.CustomWeekView"
+                            app:year_view_background="#f6f6f6"
+                            app:year_view_day_text_color="#333333"
+                            app:year_view_day_text_size="8sp"
+                            app:year_view_month_text_color="#ff0000"
+                            app:year_view_month_text_size="20sp"
+                            app:year_view_scheme_color="#f17706"
+                            app:year_view_week_height="0dp"
+                            app:year_view_week_text_color="#666666"
+                            app:year_view_week_text_size="7sp" />
+                    </com.haibin.calendarview.CalendarLayout>
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
