--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -266,9 +266,101 @@
                         android:layout_marginBottom="5dp"
                         android:background="@android:color/holo_red_light" />
 
+                    <RelativeLayout
+                        android:id="@+id/rl_tool"
+                        android:background="#fff"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp">
+
+                        <TextView
+                            android:id="@+id/tv_month_day"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="16dp"
+                            android:textColor="#000000"
+                            android:textSize="26sp"
+                            android:textStyle="bold" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_toRightOf="@+id/tv_month_day"
+                            android:orientation="vertical"
+                            android:paddingLeft="6dp"
+                            android:paddingTop="12dp"
+                            android:paddingRight="6dp"
+                            android:paddingBottom="12dp">
+
+                            <TextView
+                                android:id="@+id/tv_year"
+                                android:layout_width="wrap_content"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:textColor="#000000"
+                                android:textSize="10sp" />
+
+                            <TextView
+                                android:id="@+id/tv_lunar"
+                                android:layout_width="wrap_content"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:textColor="#000000"
+                                android:textSize="10sp" />
+                        </LinearLayout>
+
+                        <ImageView
+                            android:id="@+id/iv_clear"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="12dp"
+                            android:layout_toLeftOf="@+id/fl_current"
+                            android:background="@drawable/bg_ripple"
+                            android:contentDescription="@string/app_name"
+                            android:padding="7dp"
+                            android:scaleType="centerInside"
+                            android:src="@mipmap/ic_clear"
+                            app:tint="#333333" />
+
+                        <FrameLayout
+                            android:id="@+id/fl_current"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="12dp"
+                            android:background="@drawable/bg_ripple">
+
+                            <ImageView
+                                android:id="@+id/ib_calendar"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:contentDescription="@string/app_name"
+                                android:scaleType="centerInside"
+                                android:src="@mipmap/ic_calendar"
+                                app:tint="#000000" />
+
+                            <TextView
+                                android:id="@+id/tv_current_day"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="2dp"
+                                android:gravity="center"
+                                android:text="13"
+                                android:textColor="#000000"
+                                android:textSize="12sp" />
+                        </FrameLayout>
+                    </RelativeLayout>
+
                     <com.haibin.calendarview.CalendarLayout
+                        android:id="@+id/calendarLayout"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="#fff"
                         android:orientation="vertical"
                         app:calendar_content_view_id="@+id/recyclerView"
                         app:calendar_show_mode="only_month_view"
@@ -321,6 +413,7 @@
                             app:year_view_week_height="0dp"
                             app:year_view_week_text_color="#666666"
                             app:year_view_week_text_size="7sp" />
+
                     </com.haibin.calendarview.CalendarLayout>
 
                 </LinearLayout>
