--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,15 +104,24 @@
                         <Button
                             android:id="@+id/shizuku_is_run_btn"
                             style="@style/s"
+                            android:textColor="@color/black"
                             android:onClick="ch"
                             android:text="Shizuku未运行" />
 
                         <Button
                             android:id="@+id/shizuku_is_accept_btn"
+                            android:textColor="@color/black"
                             style="@style/s"
                             android:text="Shizuku未授权" />
 
                     </LinearLayout>
+
+                    <Button
+                        android:id="@+id/test_close_app_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:onClick="onClick"
+                        android:text="关闭指定包名APP" />
 
 
                 </LinearLayout>
